--- a/React/package.json
+++ b/React/package.json
@@ -7,7 +7,9 @@
     "doc": "doc"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"webpack-dev-server",
+    "build":"webpack"
   },
   "author": "laoxie",
   "license": "ISC",
