--- a/Redux/package.json
+++ b/Redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux",
+  "name": "myredux",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
+    "redux": "^4.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.0",
