--- a/Wechat/baiduMusic/app.json
+++ b/Wechat/baiduMusic/app.json
@@ -8,7 +8,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#f00",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "百度音乐",
     "navigationBarTextStyle":"white"
   }
 }
